# wh_web_09

./: authors.json  main.py  pyproject.toml  quotes.json  scrapy.cfg  test_json.py
quotes_scraper/: items.py  middlewares.py  pipelines.py  settings.py
quotes_scraper/spiders/: quotes_spider.py
